added sam3d implementation

--- a/validation/granite_dells/granite_dells_rock_annotation.ipynb
+++ b/validation/granite_dells/granite_dells_rock_annotation.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Box Canyon Park \n",
+    "# Granite Dells\n",
     "\n",
-    "https://www.google.com/maps/place/Box+Canyon+Park/@33.8857385,-117.7309815,910m/data=!3m2!1e3!4b1!4m6!3m5!1s0x80dcce2292288e59:0xc1684d99397ec327!8m2!3d33.8857385!4d-117.7284066!16s%2Fg%2F1tm8kwym?entry=ttu"
+    "https://www.google.com/maps/dir//34.5936281,-112.4193333/@34.5933671,-112.4193692,256m/data=!3m1!1e3!4m2!4m1!3e0?entry=ttu&g_ep=EgoyMDI0MTIwNC4wIKXMDSoASAFQAw%3D%3D"
    ]
   },
   {
@@ -20,19 +20,19 @@
     "Using SfM products from Agisoft:\n",
     "```\n",
     "semantic_SfM/data\n",
-    "    ├── box_canyon_park\n",
+    "    ├── granite_dells\n",
     "        ├── DJI_photos\n",
     "        │       ├── DJI_0000.JPG\n",
     "        │       ├── DJI_0001.JPG\n",
     "        │       ├── ...\n",
     "        │       └── DJI_0100.JPG\n",
     "        ├── SfM_products\n",
-    "        │       ├── agisoft_cameras.xml\n",
-    "        │       ├── model.jpg\n",
-    "        │       ├── model.obj\n",
-    "        │       ├── model.mtl\n",
-    "        │       └── agisoft_model.las   \n",
-    "        ├── segmentations\n",
+    "        │       ├── cameras.xml\n",
+    "        │       ├── granite_dells_wgs_utm.jpg\n",
+    "        │       ├── granite_dells_wgs_utm.obj\n",
+    "        │       ├── granite_dells_wgs_utm.mtl\n",
+    "        │       └── granite_dells_wgs_utm.las   \n",
+    "        ├── segmentations_classes\n",
     "        └── associations\n",
     "\n",
     "```"
@@ -46,13 +46,31 @@
    "source": [
     "import os\n",
     "\n",
-    "scene_dir = '../data/box_canyon_park'\n",
-    "pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'model.las')\n",
+    "scene_dir = '../../data/granite_dells'\n",
+    "pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_wgs_utm.las')\n",
     "associations_folder_path = os.path.join(scene_dir, 'associations')\n",
-    "segmentations_folder_path = os.path.join(scene_dir, 'segmentations')\n",
+    "segmentations_folder_path = os.path.join(scene_dir, 'segmentations_classes')\n",
     "photos_folder_path = os.path.join(scene_dir, 'DJI_photos')\n",
-    "camera_path = os.path.join(scene_dir, 'SfM_products', 'agisoft_cameras.xml')\n",
-    "mesh_path = os.path.join(scene_dir, 'SfM_products', 'model.obj')"
+    "camera_path = os.path.join(scene_dir, 'SfM_products', 'cameras.xml')\n",
+    "mesh_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_wgs_utm.obj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "downsampling= False\n",
+    "\n",
+    "if downsampling == True:\n",
+    "    from ssfm.downsample_pointcloud import downsample_pointcloud\n",
+    "    downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled.las')\n",
+    "    downsample_pointcloud(pointcloud_path, downsampled_pointcloud_path, \"uniform\", 4)\n",
+    "\n",
+    "\n",
+    "downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled.las')\n",
+    "pointcloud_path = downsampled_pointcloud_path"
    ]
   },
   {
@@ -64,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "sam_params = {}\n",
     "sam_params['model_name'] = 'sam2'\n",
-    "sam_params['model_path'] = '../semantic_SfM/sam2/sam2.1_hiera_large.pt'\n",
+    "sam_params['model_path'] = '../../semantic_SfM/sam2/sam2.1_hiera_large.pt'\n",
     "sam_params['device'] = 'cuda:0'\n",
     "sam_params['points_per_side'] = 32\n",
     "sam_params['points_per_batch'] = 128\n",
@@ -90,12 +108,12 @@
     "sam_params['use_m2m'] = True\n",
     "\n",
     "\n",
-    "image_path_list = [os.path.join(photos_folder_path, image) for image in os.listdir(photos_folder_path)]\n",
+    "image_path_list = [os.path.join(photos_folder_path, image) for image in os.listdir(photos_folder_path) if image.endswith('.JPG')]\n",
     "\n",
     "# sort images based on the values of keyimages in file names\n",
     "image_path_list = sorted(image_path_list, key=lambda x: int(x.split('/')[-1].split('.')[0].split('_')[-1]))\n",
     "\n",
-    "image_list = [image for image in os.listdir(photos_folder_path)]\n",
+    "image_list = [image for image in os.listdir(photos_folder_path) if image.endswith('.JPG')]\n",
     "\n",
     "# sort images based on the values of keyimages in file names\n",
     "image_list = sorted(image_list, key=lambda x: int(x.split('/')[-1].split('.')[0].split('_')[-1]))"
@@ -103,7 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# refine image list using segmentations_classes\n",
+    "keyframes = [keyframe.replace('.npy', '.JPG') for keyframe in os.listdir(segmentations_folder_path) if keyframe.endswith('.npy')]\n",
+    "\n",
+    "image_list = [image for image in image_list if image in keyframes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +143,79 @@
     "    image_segmentor = ImageSegmentation(sam_params)   \n",
     "    image_segmentor.set_distortion_correction(camera_path)\n",
     "    image_segmentor.batch_predict(image_path_list, segmentations_folder_path, save_overlap=True, skip_existing=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ssfm.simple_mask_filter import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of files: 316\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 316/316 [05:12<00:00,  1.01it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "apply_simple_filter = False\n",
+    "\n",
+    "if apply_simple_filter:\n",
+    "    configs = {\n",
+    "        'window_size': 5,\n",
+    "        'depth_folder': \"../../data/granite_dells/associations/depth\",\n",
+    "        'output_folder': \"../../data/granite_dells/segmentations_filtered\",\n",
+    "        'area_upper_threshold': 10,\n",
+    "        'area_lower_threshold': 0.001,\n",
+    "        'erosion_kernel_size': 5,\n",
+    "        'erosion_iteration':1,\n",
+    "        'camera_parameter_file': \"../../data/granite_dells/SfM_products/cameras.xml\",\n",
+    "        'background_mask': True\n",
+    "    }\n",
+    "\n",
+    "    mask_filter = SimpleMaskFilter(configs)\n",
+    "\n",
+    "    segmentation_folder_path = \"../../data/granite_dells/segmentations\"\n",
+    "\n",
+    "    mask_filter.filter_batch_processes(segmentation_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segmentations_folder_path = \"../../data/granite_dells/segmentations_filtered\""
    ]
   },
   {
@@ -134,17 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pointcloud_projector = PointcloudProjection(depth_filtering_threshold=0.01)\n",
+    "pointcloud_projector = PointcloudProjection(depth_filtering_threshold=0.01, effective_depth = np.inf)\n",
     "#pointcloud_projector = PointcloudProjection()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,24 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 129/129 [04:46<00:00,  2.22s/it]\n"
+      "Processing frames: 100%|██████████| 295/295 [17:00<00:00,  3.46s/it]\n"
      ]
     }
    ],
    "source": [
-    "pointcloud_projector.parallel_batch_project_joblib(image_list, associations_folder_path, num_workers=8)"
+    "pointcloud_projector.parallel_batch_project_joblib(image_list, associations_folder_path, num_workers=8, save_depth=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,40 +285,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smc_solver = KeyimageAssociationsBuilder(image_list, associations_folder_path, segmentations_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 129/129 [00:50<00:00,  2.53it/s]\n"
+      "100%|██████████| 295/295 [01:19<00:00,  3.70it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building edges on GPU with 10 chunks took 5.454965114593506 seconds.\n"
+      "Building edges on GPU with 10 chunks took 11.494716167449951 seconds.\n"
      ]
     }
    ],
    "source": [
-    "smc_solver = KeyimageAssociationsBuilder(image_list, associations_folder_path, segmentations_folder_path)\n",
     "smc_solver.build_associations()\n",
     "smc_solver.build_graph(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/box_canyon_park/associations/graph_with_cameras.graphml\n"
+      "../../data/granite_dells/associations/graph_with_cameras.graphml\n"
      ]
     }
    ],
@@ -225,9 +336,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Metric                                                       | Count      | Percentage           |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Number of points not covered by any image                    | 1808681    | 14.52                |\n",
+      "| Number of points covered by less than or equal to 1 image    | 2512332    | 20.16                |\n",
+      "| Number of points covered by less than or equal to 3 images   | 3706218    | 29.75                |\n",
+      "| Number of points covered by less than or equal to 5 images   | 4559353    | 36.59                |\n"
+     ]
+    }
+   ],
    "source": [
     "smc_solver.find_min_cover()\n",
     "#smc_solver.refine(0.5)"
@@ -242,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -261,17 +385,17 @@
       "+----------------------------------------+----------------------+\n",
       "|              Memory Type               | Memory Required (GB) |\n",
       "+----------------------------------------+----------------------+\n",
-      "|      Segmentation for each image       | 0.037181854248046875 |\n",
-      "| Pixel2point association for each image | 0.07436370849609375  |\n",
-      "| Point2pixel association for each image | 0.17169087380170822  |\n",
+      "|      Segmentation for each image       | 0.022966861724853516 |\n",
+      "| Pixel2point association for each image | 0.04593372344970703  |\n",
+      "| Point2pixel association for each image | 0.04641452431678772  |\n",
       "|                                        |                      |\n",
-      "|      Segmentation for all images       |  4.796459197998047   |\n",
-      "| Pixel2point association for all images |  9.592918395996094   |\n",
-      "| Point2pixel association for all images |  22.14812272042036   |\n",
-      "|          pc_segmentation_ids           |  0.8584543690085411  |\n",
-      "|         pc_segmentation_probs          |  0.8584543690085411  |\n",
-      "|          keyimage_association          |   5.53703068010509   |\n",
-      "|                 Total                  |  43.79143973253667   |\n",
+      "|      Segmentation for all images       |  6.775224208831787   |\n",
+      "| Pixel2point association for all images |  13.550448417663574  |\n",
+      "| Point2pixel association for all images |  13.692284673452377  |\n",
+      "|          pc_segmentation_ids           |  0.2320726215839386  |\n",
+      "|         pc_segmentation_probs          |  0.2320726215839386  |\n",
+      "|          keyimage_association          |  3.4230711683630943  |\n",
+      "|                 Total                  |  37.90517371147871   |\n",
       "+----------------------------------------+----------------------+\n"
      ]
     }
@@ -298,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,19 +433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images: 100%|██████████| 129/129 [2:42:48<00:00, 75.72s/it]  \n"
+      "Processing images: 100%|██████████| 295/295 [57:46<00:00, 11.75s/it]\n"
      ]
     }
    ],
    "source": [
-    "obr = ObjectRegistration(pointcloud_path, segmentations_folder_path, associations_folder_path, image_list=image_list, using_graph=True)\n",
+    "obr = ObjectRegistration(pointcloud_path, segmentations_folder_path, associations_folder_path, image_list=image_list, using_graph=True, radius=2, decaying=1)\n",
     "\n",
     "# Run object registration\n",
     "obr.object_registration(iou_threshold=0.5, save_semantics=True)"
@@ -329,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -337,15 +461,15 @@
      "output_type": "stream",
      "text": [
       "Before removing small semantics: \n",
-      "maximum of semantics:  8922\n",
-      "number of unique semantics:  1693\n",
+      "maximum of semantics:  3081\n",
+      "number of unique semantics:  55\n",
       "After removing small semantics: \n",
-      "number of unique semantics:  411\n"
+      "number of unique semantics:  55\n"
      ]
     }
    ],
    "source": [
-    "image_id = 128\n",
+    "image_id = 294\n",
     "semantics_folder_path = os.path.join(associations_folder_path, 'semantics', 'semantics_{}.npy'.format(image_id))\n",
     "save_las_path = os.path.join(associations_folder_path, 'semantics', 'semantics_{}.las'.format(image_id))\n",
     "add_semantics_to_pointcloud(pointcloud_path, semantics_folder_path, save_las_path, remove_small_N=500, nearest_interpolation=500)\n",
@@ -354,9 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../data/granite_dells/associations/semantics/semantics_315.las\n",
+      "number of unique semantics:  700\n"
+     ]
+    }
+   ],
    "source": [
     "print(save_las_path)\n",
     "\n",
@@ -375,14 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique semantics:  410\n"
+      "Number of unique semantics:  38\n"
      ]
     }
    ],
@@ -391,6 +524,27 @@
     "post_processing = PostProcessing(semantic_pc_file_path)\n",
     "post_processing.shuffle_semantic_ids(exclude_largest_semantic=False)\n",
     "save_las_path = os.path.join(associations_folder_path, 'semantics', 'semantics_{}_shuffled.las'.format(image_id))\n",
+    "post_processing.save_semantic_pointcloud(save_las_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique semantics:  38\n"
+     ]
+    }
+   ],
+   "source": [
+    "semantic_pc_file_path = save_las_path\n",
+    "post_processing = PostProcessing(semantic_pc_file_path)\n",
+    "post_processing.sort_semantic_ids(exclude_largest_semantic=False)\n",
+    "save_las_path = os.path.join(associations_folder_path, 'semantics', 'semantics_{}_sorted.las'.format(image_id))\n",
     "post_processing.save_semantic_pointcloud(save_las_path)"
    ]
   },
