--- a/validation/kubric/kubric_single_sam2.ipynb
+++ b/validation/kubric/kubric_single_sam2.ipynb
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "scene_dir = '../../data/kubric_1'\n",
+    "scene_dir = '../../data/kubric_0'\n",
     "pointcloud_path = os.path.join(scene_dir, 'reconstructions', 'combined_point_cloud.las')\n",
     "associations_folder_path = os.path.join(scene_dir, 'associations')\n",
     "segmentations_folder_path = os.path.join(scene_dir, 'segmentations')\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 285/285 [00:05<00:00, 54.51it/s]\n"
+      "100%|██████████| 285/285 [00:05<00:00, 52.50it/s]\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
     "segmentations_folder_path = os.path.join(scene_dir, 'segmentations_filtered')\n",
     "\n",
     "config = {'area_lower_threshold': 100,\n",
-    "'segmentation_folder_path': '../../data/kubric_1/segmentations',\n",
+    "'segmentation_folder_path': '../../data/kubric_0/segmentations',\n",
     "'output_folder_path': segmentations_folder_path,\n",
     "'num_processes':8}\n",
     "\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 285/285 [00:14<00:00, 20.11it/s]\n"
+      "Processing frames: 100%|██████████| 285/285 [00:13<00:00, 20.56it/s]\n"
      ]
     }
    ],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,22 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../data/kubric_1/associations\n",
-      "../../data/kubric_1/segmentations_filtered\n"
+      "../../data/kubric_0/associations\n",
+      "../../data/kubric_0/segmentations_filtered\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 285/285 [00:01<00:00, 148.45it/s]\n"
+      "100%|██████████| 285/285 [00:01<00:00, 211.60it/s]\n"
      ]
     }
    ],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -555,10 +555,10 @@
      "text": [
       "| Metric                                                       | Count      | Percentage           |\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "| Number of points not covered by any image                    | 697264     | 33.02                |\n",
-      "| Number of points covered by less than or equal to 1 image    | 816163     | 38.65                |\n",
-      "| Number of points covered by less than or equal to 3 images   | 1106195    | 52.38                |\n",
-      "| Number of points covered by less than or equal to 5 images   | 1399961    | 66.29                |\n"
+      "| Number of points not covered by any image                    | 687711     | 32.23                |\n",
+      "| Number of points covered by less than or equal to 1 image    | 802259     | 37.59                |\n",
+      "| Number of points covered by less than or equal to 3 images   | 1098365    | 51.47                |\n",
+      "| Number of points covered by less than or equal to 5 images   | 1406791    | 65.92                |\n"
      ]
     }
    ],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,16 +643,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../data/kubric_1/reconstructions/combined_point_cloud.las\n",
-      "../../data/kubric_1/associations\n",
-      "../../data/kubric_1/segmentations_filtered\n"
+      "../../data/kubric_0/reconstructions/combined_point_cloud.las\n",
+      "../../data/kubric_0/associations\n",
+      "../../data/kubric_0/segmentations_filtered\n"
      ]
     }
    ],
@@ -664,14 +664,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images: 100%|██████████| 285/285 [04:35<00:00,  1.03it/s]\n"
+      "Processing images: 100%|██████████| 285/285 [04:52<00:00,  1.03s/it]\n"
      ]
     }
    ],
@@ -680,12 +680,12 @@
     "obr = ObjectRegistration(pointcloud_path, segmentations_folder_path, associations_folder_path, keyimage_associations_file_name=keyimage_associations_file_name, image_list=image_list)\n",
     "\n",
     "# Run object registration\n",
-    "obr.object_registration(iou_threshold=0.50, save_semantics=True)"
+    "obr.object_registration(iou_threshold=0.2, save_semantics=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -693,10 +693,10 @@
      "output_type": "stream",
      "text": [
       "Before removing small semantics: \n",
-      "maximum of semantics:  4985\n",
-      "number of unique semantics:  835\n",
+      "maximum of semantics:  5080\n",
+      "number of unique semantics:  534\n",
       "After removing small semantics: \n",
-      "number of unique semantics:  236\n"
+      "number of unique semantics:  207\n"
      ]
     }
    ],
@@ -709,15 +709,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../data/kubric_1/associations/semantics/semantics_284.las\n",
-      "number of unique semantics:  235\n",
+      "../../data/kubric_0/associations/semantics/semantics_284.las\n",
+      "number of unique semantics:  206\n",
       "number of semantics with less than 100 points:  0\n"
      ]
     }
@@ -744,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique semantics:  235\n"
+      "Number of unique semantics:  206\n"
      ]
     }
    ],
@@ -765,17 +765,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique semantics in prediction:  235\n",
+      "Unique semantics in prediction:  206\n",
       "Unique semantics in ground truth:  201\n",
-      "AP:  [0.8085106382978723, 0.7829787234042553, 0.7702127659574468, 0.7489361702127659, 0.723404255319149, 0.6936170212765957, 0.6212765957446809, 0.5617021276595745, 0.502127659574468, 0.23404255319148937]  AR:  [0.945273631840796, 0.9154228855721394, 0.900497512437811, 0.8756218905472637, 0.845771144278607, 0.8109452736318408, 0.7263681592039801, 0.6567164179104478, 0.5870646766169154, 0.2736318407960199]\n",
-      "mAP:  0.6446808510638298  mAR:  0.7537313432835822\n"
+      "AP:  [0.9271844660194175, 0.912621359223301, 0.9077669902912622, 0.9029126213592233, 0.8737864077669902, 0.8543689320388349, 0.8106796116504854, 0.7815533980582524, 0.6553398058252428, 0.35436893203883496]  AR:  [0.9502487562189055, 0.9353233830845771, 0.9303482587064676, 0.9253731343283582, 0.8955223880597015, 0.8756218905472637, 0.8308457711442786, 0.8009950248756219, 0.6716417910447762, 0.36318407960199006]\n",
+      "mAP:  0.7980582524271844  mAR:  0.817910447761194\n"
      ]
     }
    ],
@@ -795,6 +795,13 @@
     "mAR = np.sum(mAR) / len(mAR)\n",
     "print('mAP: ', mAP, ' mAR: ', mAR)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
