--- a/validation/granite_dells/granite_dells_rock_annotation.ipynb
+++ b/validation/granite_dells/granite_dells_rock_annotation.ipynb
@@ -57,19 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downsampled point cloud saved to ../../data/granite_dells/SfM_products/granite_dells_downsampled_sam3d.las\n"
+     ]
+    }
+   ],
    "source": [
-    "downsampling= False\n",
+    "downsampling= True\n",
     "\n",
     "if downsampling == True:\n",
     "    from ssfm.downsample_pointcloud import downsample_pointcloud\n",
-    "    downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled.las')\n",
-    "    downsample_pointcloud(pointcloud_path, downsampled_pointcloud_path, \"uniform\", 4)\n",
+    "    downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled_sam3d.las')\n",
+    "    downsample_pointcloud(pointcloud_path, downsampled_pointcloud_path, \"uniform\", 40)\n",
     "\n",
     "\n",
-    "downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled.las')\n",
+    "downsampled_pointcloud_path = os.path.join(scene_dir, 'SfM_products', 'granite_dells_downsampled_sam3d.las')\n",
     "pointcloud_path = downsampled_pointcloud_path"
    ]
   },
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 295/295 [17:00<00:00,  3.46s/it]\n"
+      "Processing frames: 100%|██████████| 295/295 [16:07<00:00,  3.28s/it]\n"
      ]
     }
    ],
